--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <div id="modal-container" class="modal">
                 <div class="modal-content">
                     <span id="close">&times;</span>
-                    <p>Some text homie</p>
                 </div>
             </div>
         </nav>    
@@ -41,6 +40,13 @@
         <button id="autoClick">Auto Clicker!</button disabled>
         <p id="auto-click-count">Amount of Auto Clickers:</p>
         <span id="autoClicked">0</span>
+        </section>
+    </main>
+
+    <main>
+        <section id="auto-display-handler">
+        <p id="auto-click-cost">Cost of Auto Clicker:</p>
+        <span id="autoClickCostDisplay">10</span>
         </section>
     </main>
     
